--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,10 @@ export("%>%")
 export(filter_locus)
 export(filter_locus.character)
 export(filter_locus.numeric)
+export(get_promoter_distances)
 export(get_promoters)
+export(make_txdb)
+export(trim_distances)
+export(write_fasta)
+export(write_rda)
 importFrom(magrittr,"%>%")
