--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(filter_locus)
 export(filter_locus.character)
 export(filter_locus.numeric)
 export(get_promoter_distances)
+export(get_promoter_sequences)
 export(get_promoters)
 export(make_txdb)
 export(trim_distances)
