get_txdb_annotation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(filter_locus.numeric)
 export(get_promoter_distances)
 export(get_promoter_sequences)
 export(get_promoters)
+export(get_txdb_annotation)
 export(make_txdb)
 export(trim_distances)
 export(write_fasta)
