improved FASTA input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(filter_locus.character)
 export(filter_locus.numeric)
 export(get_promoter_distances)
 export(get_promoter_sequences)
+export(get_promoter_sequences2)
 export(get_promoters)
 export(get_txdb_annotation)
 export(make_txdb)
