--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(filter_locus.numeric)
 export(get_promoter_distances)
 export(get_promoter_sequences)
 export(get_promoter_sequences2)
+export(get_promoter_sequences2.parallel)
+export(get_promoter_sequences2.serial)
 export(get_promoters)
 export(get_txdb_annotation)
 export(make_txdb)
