--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,8 @@ export(filter_locus.character)
 export(filter_locus.numeric)
 export(get_promoter_distances)
 export(get_promoter_sequences)
-export(get_promoter_sequences2)
-export(get_promoter_sequences2.parallel)
-export(get_promoter_sequences2.serial)
+export(get_promoter_sequences.parallel)
+export(get_promoter_sequences.serial)
 export(get_promoters)
 export(get_txdb_annotation)
 export(make_txdb)
