--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(get_promoter_sequences.serial)
 export(get_promoters)
 export(get_txdb_annotation)
 export(make_txdb)
-export(trim_distances)
+export(trim_promoter_distances)
 export(write_fasta)
 export(write_rda)
 importFrom(magrittr,"%>%")
