--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(filter_locus)
 export(filter_locus.character)
 export(filter_locus.numeric)
+export(get_plotdata_locus)
+export(get_plotdata_promoter)
 export(get_promoter_distances)
 export(get_promoter_sequences)
 export(get_promoter_sequences.parallel)
@@ -11,7 +13,8 @@ export(get_promoter_sequences.serial)
 export(get_promoters)
 export(get_txdb_annotation)
 export(make_txdb)
-export(trim_promoter_distances)
+export(plot_promoter_maps)
+export(set_promoter_sizes)
 export(write_fasta)
 export(write_rda)
 importFrom(magrittr,"%>%")
