--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,22 +17,26 @@ Description: Extract the sequences of promoter regions from the genome fasta fil
 License: file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 LazyData: true
 Suggests:
   knitr,
   rmarkdown,
   testthat (>= 3.0.0)
 VignetteBuilder: knitr
-Imports: 
+Imports:
     Biostrings,
     data.table,
     dplyr,
     GenomicFeatures,
+    gggenes,
+    ggplot2,
     progress,
     magrittr,
     multidplyr,
     Rsamtools,
     stringr,
     tidyr,
-    plyr
+    plyr,
+    gggenes,
+    ggplot2
