--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(plot_promoter_maps)
 export(set_promoter_sizes)
 export(write_fasta)
 export(write_rda)
+importFrom(data.table,":=")
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
