--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ export(set_promoter_sizes)
 export(write_fasta)
 export(write_rda)
 importFrom(data.table,":=")
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
