--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: Extract the sequences of promoter regions from the genome fasta fil
 License: file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 LazyData: true
 Suggests:
   knitr,
@@ -31,11 +31,12 @@ Imports:
     GenomicFeatures,
     gggenes,
     ggplot2,
-    progress,
+    lifecycle,
     magrittr,
     multidplyr,
+    plyr,
+    progress,
+    purrr,
     Rsamtools,
     stringr,
-    tidyr,
-    plyr,
-    lifecycle
+    tidyr
